# OSPSuite.SimModel.Solver.CVODES

./: .gitignore  .gitmodules  OSPSuite.SimModelSolver.CVODES.sln  README.md  appveyor.yml  buildNix.sh  packages.config
.github/workflows/: _build.yml  build-and-publish.yml
src/OSPSuite.SimModelSolver_CVODES/: CMakeLists.txt  OSPSuite.SimModelSolver_CVODES.nuspec  OSPSuite.SimModelSolver_CVODES_MacOS.nuspec  OSPSuite.SimModelSolver_CVODES_MacOSArm64.nuspec  OSPSuite.SimModelSolver_CVODES_MacOSx64.nuspec  OSPSuite.SimModelSolver_CVODES_Ubuntu18.nuspec  OSPSuite.SimModelSolver_CVODES_Ubuntu22.nuspec  SimModelSolver_CVODES.vcxproj  pack.csproj
src/OSPSuite.SimModelSolver_CVODES/include/SimModelSolver_CVODES/: SimModelSolver_CVODES.h
src/OSPSuite.SimModelSolver_CVODES/src/: SimModelSolver_CVODES.cpp
tests/OSPSuite.SimModelSolver_CVODES.Tests/: SimModelSolver_CVODES.Specs.vcxproj
tests/OSPSuite.SimModelSolver_CVODES.Tests/Src/: SolverSpecs.cpp
